--- a/index.html
+++ b/index.html
@@ -94,9 +94,12 @@
                 <i class="fas fa-arrow-right text-xs opacity-30"></i>
             </a>
 
-            <button class="w-full bg-sky-500 hover:bg-sky-400 text-slate-900 font-black py-4 rounded-xl shadow-lg transition mt-6 uppercase tracking-widest text-xs">
+            <!-- <button class="w-full bg-sky-500 hover:bg-sky-400 text-slate-900 font-black py-4 rounded-xl shadow-lg transition mt-6 uppercase tracking-widest text-xs">
                 <i class="fas fa-user-plus mr-2"></i> Save Contact
-            </button>
+            </button> -->
+            <a href="tel:+22890493789" class="block w-full bg-sky-500 hover:bg-sky-400 text-slate-900 font-black py-4 rounded-xl shadow-lg transition mt-6 uppercase tracking-widest text-xs text-center">
+    <i class="fas fa-phone-alt mr-2"></i> Appeler maintenant
+</a>
 
         </div>
         
